<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemNewActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarItemNew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarItemNew">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/new_item"
            android:textColor="@color/primaryText"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editTextItemName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/item_name_prompt"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/scondaryText"
            android:textSize="19dp" />

        <EditText
            android:id="@+id/editTextItemCost"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/item_cost_prompt"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/scondaryText"
            android:textSize="19dp" />

        <EditText
            android:id="@+id/editTextItemDescription"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/item_description_prompt"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/scondaryText"
            android:textSize="19dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSaveItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textSize="20dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>